# agentic-rca

./: .env.example  .gitignore  ARCHITECTURE.md  DESIGN.md  README.md  app.py  packages.txt  pyproject.toml  requirements.txt  streamlit_app.py
.claude/: launch.json
.streamlit/: config.toml  secrets.toml.example
deliverables/: 01_Technical_Design_Document.docx  02_Conceptual_Architecture_Blueprint.docx  03_Prototype_Code_and_How_to_Run.docx  build_arch.js  build_code.js  build_tdd.js  lib.js  to_pdf.ps1
diagrams/: diagram_1.mmd  diagram_2.mmd  diagram_3.mmd  diagram_4.mmd  diagram_5.mmd  diagram_6.mmd  diagram_7.mmd  mmdcfg.json
src/rca/: __init__.py  cli.py  config.py  pipeline.py  ui_theme.py  webapp.py
src/rca/agent/: __init__.py  graph.py  llm_provider.py  prompts.py  tools.py
src/rca/ingest/: __init__.py  drain_miner.py  normalize.py  parser.py  reader.py
src/rca/store/: __init__.py  duckdb_store.py  schema.py  vector_store.py
src/rca/synth/: __init__.py  causal.py  lineage.py  report.py
tests/: conftest.py  test_edge_cases.py  test_hardening.py  test_ingest.py  test_scenarios.py
