[project]
name = "rca-engine"
version = "0.1.0"
description = "Agentic Root-Cause-Analysis engine for high-volume multi-tenant log streams"
requires-python = ">=3.10"
readme = "README.md"

# Dependencies are pinned in requirements.txt (the authoritative lockfile for the
# prototype). This file documents project metadata and the console entrypoint.

[project.scripts]
rca = "rca.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
